{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 34,
  "lineage": "d8e95560-abe4-0674-df2d-0667d9d2a4ef",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:internet-gateway/igw-05b882c475fce3d9c",
            "id": "igw-05b882c475fce3d9c",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "p-igw"
            },
            "tags_all": {
              "Name": "p-igw"
            },
            "vpc_id": "vpc-070da99949eda2492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0feabd2c36da9dae8",
            "description": "Bastion host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0feabd2c36da9dae8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070da99949eda2492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_master_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-02f47e6ac5535a464",
            "description": "Security group for k3s master node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f47e6ac5535a464",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0feabd2c36da9dae8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k3s-master-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k3s-master-sg"
            },
            "tags_all": {
              "Name": "k3s-master-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070da99949eda2492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-00789bdf23f79f944",
            "description": "Security group for k3s worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00789bdf23f79f944",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0feabd2c36da9dae8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k3s-worker-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k3s-worker-sg"
            },
            "tags_all": {
              "Name": "k3s-worker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070da99949eda2492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-05c3b8d5d2b8b9281",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c3b8d5d2b8b9281",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.12.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nat-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070da99949eda2492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-0084db5c19da015bf",
            "description": "Security group for RDS (MySQL)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0084db5c19da015bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MySQL from anywhere (DEV ONLY)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-070da99949eda2492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_to_worker_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "All traffic from master to worker nodes",
            "from_port": 0,
            "id": "sgrule-2452497633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-00789bdf23f79f944",
            "security_group_rule_id": "sgr-00dff0e5426b0238f",
            "self": false,
            "source_security_group_id": "sg-02f47e6ac5535a464",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.k3s_master_sg",
            "module.sg.aws_security_group.k3s_worker_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_to_master_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "All traffic from worker nodes to master",
            "from_port": 0,
            "id": "sgrule-1572906840",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-2",
            "security_group_id": "sg-02f47e6ac5535a464",
            "security_group_rule_id": "sgr-0b1cbc992421b5fd7",
            "self": false,
            "source_security_group_id": "sg-00789bdf23f79f944",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion_sg",
            "module.sg.aws_security_group.k3s_master_sg",
            "module.sg.aws_security_group.k3s_worker_sg",
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0f38befdf63881d50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f38befdf63881d50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-070da99949eda2492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "private-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-06bff9087432892fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bff9087432892fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-070da99949eda2492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-027e38de5c93cb8fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027e38de5c93cb8fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-a"
            },
            "tags_all": {
              "Name": "db-subnet-a"
            },
            "vpc_id": "vpc-070da99949eda2492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "db-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-067bf662f725fc470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067bf662f725fc470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "db-subnet-c"
            },
            "tags_all": {
              "Name": "db-subnet-c"
            },
            "vpc_id": "vpc-070da99949eda2492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0dcb7f4cbe83ac198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcb7f4cbe83ac198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-a",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-070da99949eda2492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        },
        {
          "index_key": "public-subnet-c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0e1218725f04e4647",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1218725f04e4647",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-c",
              "kubernetes.io/cluster/k3s-studylinker": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-070da99949eda2492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:vpc/vpc-070da99949eda2492",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0896314aead625570",
            "default_route_table_id": "rtb-0a25b4a6f731bce4f",
            "default_security_group_id": "sg-0ab08772d7a94e311",
            "dhcp_options_id": "dopt-0bb6bf2626d3217a9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070da99949eda2492",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a25b4a6f731bce4f",
            "owner_id": "390403881443",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}